# CAPR-Chain-of-Thought-Augmented-Prompt-Refinement

./: README.md  config.py  gitignore  main.py  pyproject.toml
data/: questions.py
src/capr/client/: bedrock_client.py
src/capr/evaluation/: aggregation.py  answer_utils.py  reporter.py
src/capr/methods/: baselines.py
src/capr/models/: schemas.py
src/capr/prompts/: baseline_prompts.py  capr_prompts.py
src/capr/run_zero_shot_cot/: capr_runner.py  self_consistency.py
tests/: test_aggregation.py  test_answer_utils.py
